Extracted emc4j, jfxplace api and framework